<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="auto"
        android:entries="@array/night_modes"
        android:entryValues="@array/nightmode_keys"
        android:key="@string/preference_key_nightmode"
        android:summary="@string/preference_daynight_summary"
        android:title="@string/preference_daynight_title"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/font_sizes"
        android:entryValues="@array/font_sizes_values"
        android:key="@string/preference_key_fontsize"
        android:summary="@string/preference_fontsize_summary"
        android:title="@string/preference_fontsize_title"
        app:iconSpaceReserved="false" />

    <!--SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/preference_key_select_text"
        android:summary="Makes you able to select text to copy. This is an option as it can disturb scrolling and on some older android devices even crash"
        android:title="Allow selection of text"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/preference_key_edittoggle"
        android:summary="Enhance the information and help survive"
        android:title="@string/allow_edit"
        app:iconSpaceReserved="false" /-->

</PreferenceScreen>